# python-pipeline

./: README.md  ci.ts  deno.json  fluentci.toml
.fluentci/src/github/: config.ts
.github/workflows/: ci.yml  example.yml  zenith.yml
example/pip/: test.gql
example/pip/.fluentci/.github/workflows/: ci.yml
example/pip/.fluentci/example/pipenv/: test_square.py
example/pip/.fluentci/example/poetry/.fluentci/example/poetry/: pyproject.toml
example/pip/.fluentci/example/poetry/tests/: test_poetry_demo.py
example/pip/.fluentci/src/azure/: README.md
example/pip/.fluentci/src/dagger/: jobs.ts  pipeline.ts
example/pipenv/: Pipfile  devbox.json  test.gql
example/pipenv/.fluentci/: schema.graphql
example/pipenv/.fluentci/example/poetry/: dagger.json
example/pipenv/.fluentci/fixtures/: buildspec.yml
example/pipenv/.fluentci/src/dagger/: jobs.ts  pipeline.ts
example/poetry/: devbox.json  test.gql
example/poetry/.fluentci/.fluentci/: dagger.json
example/poetry/.fluentci/.fluentci/example/pipenv/: main.py
example/poetry/.fluentci/.fluentci/src/github/: config.ts
example/poetry/.fluentci/example/poetry/: devbox.json
example/poetry/.fluentci/src/dagger/: pipeline.ts  queries.ts  schema.ts
example/poetry/.fluentci/src/github/: config.ts
fixtures/: azure-pipelines.yml
src/aws/: README.md  config.ts
src/azure/: README.md  config.ts
src/circleci/: README.md  config.ts
src/dagger/: jobs.ts  list_jobs.ts  pipeline.ts
src/github/: README.md  config.ts
src/gitlab/: README.md  config.ts
(+17 files in other folders)
