[tool.poetry]
authors = ["Tsiry Sandratraina <tsiry@fluentci.io>"]
description = ""
name = "poetry-demo"
version = "0.1.0"

[tool.poetry.dependencies]
emoji = "^2.1.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
